# C_CXX_source_parser

./: .gitignore  LICENSE  pyproject.toml
.clineignore/: dev_namespace_v1.md
c_cxx_source_parser/: common_parser_utils.py  header_parser.py  impl_parser.py  route_parser.py
manuals/: c_cxx_header_definition_database_schema_documentation.md  c_cxx_implementation_file_database_schema_documentation.md  header_parser.py.manual.md  impl_parser.py.manual.md
tests/: definitions_test.db  implementations_test.db  test_c_cxx_source_parser.py  test_parsers_automation.py  test_route_parser.py
