[tool.poetry]
name = "C_CXX_source_parser"
version = "0.1.0"
description = ""
authors = ["Masaya-Sakamoto <masaya-sakamoto@kke.co.jp>"]
license = "BSD-3-Clause"


[tool.poetry.dependencies]
python = "^3.10"
clang = "^20.1.0"
libclang = "^18.1.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
